--- a/src/bp-templates/bp-nouveau/common-styles/_bp-variables.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp-variables.scss
@@ -44,7 +44,7 @@ $buttons-background:   #ededed !default;
 $off-white:            #fafafa !default;
 $white:                #fff !default;
 $form-border-color:    #d6d6d6 !default;
-$form-border-focus:    #0b80a4 !default;
+$form-border-focus:    #aaa !default;
 $bp-text:              $dark-grey !default;
 $form-text:            $light-text-plus !default;
 $primary-headings:     $light-text !default;
