#149 Feed text for updated activity is not displaying aligned

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -170,6 +170,7 @@
 			.activity-time-since:before {
 				content: "\00b7 ";
 				color: $light-text;
+				display: inline-block;
 				margin-right: 3px;
 				vertical-align: middle;
 			}
