--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1381,6 +1381,7 @@ body.buddypress article.page > .entry-header .entry-title {
 .activity-list .activity-item .activity-header .activity-time-since:before {
   content: "\00b7 ";
   color: #767676;
+  display: inline-block;
   margin-right: 3px;
   vertical-align: middle;
 }
