--- a/src/bp-templates/bp-nouveau/sass/_nouveau_messages.scss
+++ b/src/bp-templates/bp-nouveau/sass/_nouveau_messages.scss
@@ -424,3 +424,23 @@ input#send-to-input {
 		margin-top: 0;
 	}
 }
+
+#bp-message-load-more {
+	margin: 15px 0;
+
+	.button {
+		background: #fafafa;
+		border: 1px solid #eee;
+		display: block;
+		font-size: 110%;
+		margin: 15px 0;
+		padding: 10px 0;
+		text-align: center;
+		width: 100%;
+	}
+
+	.button:hover {
+		background: #fff;
+		color: #333;
+	}
+}
