paragraph margin on groups

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_group_header.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_group_header.scss
@@ -93,6 +93,10 @@
 			padding: $pad-med;
 			text-align: left;
 		}
+
+		.group-description p:last-child {
+			margin-bottom: 0;
+		}
 	}
 } // close groups-header
 
