--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -2310,6 +2310,10 @@ body.no-js .single-item-header .js-self-profile-button {
   text-align: left;
 }
 
+.groups-header .desc-wrap .group-description p:last-child {
+  margin-bottom: 0;
+}
+
 /**
 *-----------------------------------------------------
 * @subsection 5.1.2 - Item Header User Accounts
