--- a/src/bp-templates/bp-nouveau/common-styles/_bp_group_header.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_group_header.scss
@@ -43,8 +43,7 @@
 			li {
 				display: inline-block;
 				float: none;
-				margin-left: 4px;
-				padding: 4px;
+				margin: 4px 0 0 4px;
 			}
 		}
 
