--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2261,8 +2261,7 @@ body.no-js .single-item-header .js-self-profile-button {
 .groups-header .moderators-lists .user-list li {
   display: inline-block;
   float: none;
-  margin-right: 4px;
-  padding: 4px;
+  margin: 4px 4px 0 0;
 }
 
 .groups-header .moderators-lists img.avatar {
