group role display in group's members list fix strings scss

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_members_loop.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_members_loop.scss
@@ -57,6 +57,12 @@
 					clear: left;
 					float: none;
 				}
+				.role {
+					clear: left;
+					float: none;
+					font-size: 14px;
+					padding: 5px 0 0;
+				}
 			}
 		}
 	}
