--- a/src/bp-templates/bp-nouveau/common-styles/_bp_members_loop.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_members_loop.scss
@@ -56,12 +56,14 @@
 				.joined {
 					clear: left;
 					float: none;
+					margin-top: 0;
 				}
+
 				.role {
 					clear: left;
 					float: none;
 					font-size: 14px;
-					padding: 5px 0 0;
+					margin: 0;
 				}
 			}
 		}
