--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1877,6 +1877,13 @@ form.ac-form .ac-reply-content input {
   .buddypress-wrap .members-group-list li .joined {
     clear: right;
     float: none;
+    margin-top: 0;
+  }
+  .buddypress-wrap .members-group-list li .role {
+    clear: right;
+    float: none;
+    font-size: 14px;
+    margin: 0;
   }
 }
 
@@ -4693,6 +4700,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 }
 
 [data-bp-tooltip] {
+  cursor: pointer;
   position: relative;
 }
 
