#153 Groups > Tooltip on group status - Added tooltip widths

--- a/src/bp-templates/bp-nouveau/common-styles/_bp-variables.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp-variables.scss
@@ -92,6 +92,11 @@ $tooltip-font-family:       "Helvetica Neue", helvetica, arial, san-serif;
 $tooltip-font-size:         12px !default;
 $tooltip-font-weight:       400 !default;
 $tooltip-max-width:         200px !default;
+$tooltip-small-width:       100px !default;
+$tooltip-medium-width:      180px !default;
+$tooltip-large-width:       260px !default;
+$tooltip-xlarge-width:      360px !default;
+$tooltip-fit-width:         100% !default;
 $tooltip-padding-hor:       8px !default;
 $tooltip-padding-vert:      5px !default;
 $tooltip-text-color:        $black !default;
