--- a/src/bp-templates/bp-nouveau/common-styles/_bp_tooltips.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_tooltips.scss
@@ -11,6 +11,7 @@
 		display: none;
 		opacity: 0;
 		position: absolute;
+		text-align: center;
 		-webkit-transform: translate3d(0, 0, 0);
 		-ms-transform: translate3d(0, 0, 0);
 		transform: translate3d(0, 0, 0);
@@ -29,7 +30,6 @@
 		font-weight: $tooltip-font-weight;
 		letter-spacing: normal;
 		line-height: 1.25;
-		max-width: $tooltip-max-width;
 		padding: $tooltip-padding-vert $tooltip-padding-hor;
 		pointer-events: none;
 		text-shadow: none;
@@ -109,5 +109,50 @@
 	&:after {
 		left: 0;
 		right: auto;
+	}
+}
+
+[data-tooltip-length="small"] {
+
+	&:after {
+		white-space: normal;
+		width: $tooltip-small-width;
+	}
+}
+
+[data-tooltip-length="medium"] {
+
+	&:after {
+		white-space: normal;
+		width: $tooltip-medium-width;
+	}
+}
+
+[data-tooltip-length="large"] {
+
+	&:after {
+		white-space: normal;
+		width: $tooltip-large-width;
+	}
+}
+
+[data-tooltip-length="xlarge"] {
+
+	&:after {
+		white-space: normal;
+		width: $tooltip-xlarge-width;
+
+		@media screen and (max-width: 768px) {
+			white-space: normal;
+			width: 90vw;
+		}
+	}
+}
+
+[data-tooltip-length="fit"] {
+
+	&:after {
+		white-space: normal;
+		width: $tooltip-fit-width;
 	}
 }
