--- a/src/bp-templates/bp-nouveau/common-styles/_bp_filters.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_filters.scss
@@ -21,7 +21,7 @@
 	.subnav-filters {
 		background: none;
 		list-style: none;
-		margin: $marg-med 0 0;
+		margin: $marg-med 0;
 		padding: 0;
 
 		div {
