--- a/src/bp-templates/bp-nouveau/common-styles/_bp_tooltips.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_tooltips.scss
@@ -11,7 +11,6 @@
 		display: none;
 		opacity: 0;
 		position: absolute;
-		text-align: center;
 		-webkit-transform: translate3d(0, 0, 0);
 		-ms-transform: translate3d(0, 0, 0);
 		transform: translate3d(0, 0, 0);
@@ -69,7 +68,7 @@
 
 .bp-tooltip {
 
-	@include bp-tooltip-default;
+	@include bp-tooltip-bottom-left;
 }
 
 // Bottom Left Tooltip for mobile and Bottom Right Tooltip for tablet/desktop
@@ -131,6 +130,9 @@
 [data-tooltip-length="large"] {
 
 	&:after {
+		font-size: 14px;
+		line-height: 1.4;
+		padding: 10px;
 		white-space: normal;
 		width: $tooltip-large-width;
 	}
@@ -139,6 +141,9 @@
 [data-tooltip-length="xlarge"] {
 
 	&:after {
+		font-size: 14px;
+		line-height: 1.4;
+		padding: 12px;
 		white-space: normal;
 		width: $tooltip-xlarge-width;
 
