--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -962,7 +962,7 @@ body.buddypress article.page > .entry-header .entry-title {
   }
   .bp-list li .item .list-title,
   .bp-list li .item .item-meta {
-    float: right;
+    float: none;
     text-align: right;
   }
   .bp-list li .item .group-details,
