fix headings color

--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -132,7 +132,7 @@ body.buddypress article.page > .entry-header {
 body.buddypress article.page > .entry-header .entry-title {
   font-size: 28px;
   font-weight: inherit;
-  color: #767676;
+  color: #122B46;
 }
 
 @media screen and (min-width: 46.8em) {
