--- a/src/bp-templates/bp-nouveau/sass/_nouveau_invites.scss
+++ b/src/bp-templates/bp-nouveau/sass/_nouveau_invites.scss
@@ -18,7 +18,8 @@
 				width: auto;
 
 				.list-title {
-					margin: 0 auto;
+					font-size: 22px;
+					margin: 10px 0 0;
 					width: 80%;
 				}
 
@@ -56,7 +57,6 @@
 			ul.group-inviters {
 				clear: both;
 				margin: 0;
-				overflow: hidden;
 
 				li {
 					border: 0;
