--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2529,7 +2529,8 @@ body.no-js .single-item-header .js-self-profile-button {
 }
 
 .buddypress .bp-invites-content ul.item-list li .list-title {
-  margin: 0 auto;
+  font-size: 22px;
+  margin: 10px 0 0;
   width: 80%;
 }
 
@@ -2561,7 +2562,6 @@ body.no-js .single-item-header .js-self-profile-button {
 .buddypress .bp-invites-content li ul.group-inviters {
   clear: both;
   margin: 0;
-  overflow: hidden;
 }
 
 .buddypress .bp-invites-content li ul.group-inviters li {
