--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -91,11 +91,11 @@ TABLE OF CONTENTS:
 	font-weight: 400;
 }
 
-.bp-about-wrap .about-description {
-	margin-top: 1.4em;
+.bp-about-wrap .wp-about-description {
+	margin: 1em 0 3em;
 	font-weight: 400;
-	line-height: 1.6;
-	font-size: 19px;
+	line-height: 1.5;
+	font-size: 14px;
 }
 
 .bp-about-wrap h3.wp-people-group {
