--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -219,6 +219,17 @@ TABLE OF CONTENTS:
 	content: "\f448";
 }
 
+#adminmenu li.toplevel_page_buddyboss-platform a[href="bp-plugin-seperator"] {
+	pointer-events: none;
+	cursor: default;
+	padding-bottom: 0;
+	margin-right: 16px;
+	margin-left: 14px;
+	margin-bottom: 5px;
+	border-bottom: 1px solid #555;
+}
+
+
 /*
  * 2.2 Settings - Components
  */
