--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -4248,35 +4248,35 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   content: "\f341";
 }
 
-.buddypress-wrap .warn {
+.warn {
   color: #b71717;
 }
 
-.buddypress-wrap .bp-messages {
+.bp-messages {
   border: 1px solid #ccc;
   margin: 0 0 15px;
 }
 
-.buddypress-wrap .bp-messages .sitewide-notices {
+.bp-messages .sitewide-notices {
   display: block;
   margin: 5px;
   padding: 0.7em;
 }
 
-.buddypress-wrap .bp-messages.info {
+.bp-messages.info {
   margin-bottom: 0;
 }
 
-.buddypress-wrap .bp-messages.updated {
+.bp-messages.updated {
   clear: both;
   display: block;
 }
 
-.buddypress-wrap .bp-messages.bp-user-messages-feedback {
+.bp-messages.bp-user-messages-feedback {
   border: 0;
 }
 
-.buddypress-wrap #group-create-body .bp-cover-image-status p.warning {
+#group-create-body .bp-cover-image-status p.warning {
   background: #0b80a4;
   border: 0;
   -webkit-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
@@ -4285,7 +4285,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   color: #fff;
 }
 
-.buddypress-wrap .bp-feedback:not(.custom-homepage-info) {
+.bp-feedback:not(.custom-homepage-info) {
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flex;
@@ -4302,7 +4302,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   align-items: stretch;
 }
 
-.buddypress-wrap .bp-feedback {
+.bp-feedback {
   background: #fff;
   color: #807f7f;
   -webkit-box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1);
@@ -4313,11 +4313,12 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   position: relative;
 }
 
-.buddypress-wrap .bp-feedback p {
+.bp-feedback p {
   margin: 0;
+  padding: 10px 5px;
 }
 
-.buddypress-wrap .bp-feedback span.bp-icon {
+.bp-feedback span.bp-icon {
   color: #fff;
   display: block;
   font-family: dashicons;
@@ -4327,31 +4328,36 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   padding: 0  0.5em;
 }
 
-.buddypress-wrap .bp-feedback .bp-help-text {
+.bp-feedback .bp-icon {
+  font-size: 20px;
+  padding: 0 2px;
+}
+
+.bp-feedback .bp-help-text {
   font-style: italic;
 }
 
-.buddypress-wrap .bp-feedback .text {
+.bp-feedback .text {
   font-size: 14px;
   margin: 0;
   padding: 0.7em 0;
 }
 
-.buddypress-wrap .bp-feedback.no-icon {
+.bp-feedback.no-icon {
   padding: 0.7em;
 }
 
-.buddypress-wrap .bp-feedback.small:before {
+.bp-feedback.small:before {
   line-height: inherit;
 }
 
-.buddypress-wrap a[data-bp-close] span:before,
-.buddypress-wrap button[data-bp-close] span:before {
+a[data-bp-close] span:before,
+button[data-bp-close] span:before {
   font-size: 32px;
 }
 
-.buddypress-wrap a[data-bp-close],
-.buddypress-wrap button[data-bp-close] {
+a[data-bp-close],
+button[data-bp-close] {
   border: 0;
   position: absolute;
   top: 10px;
@@ -4359,32 +4365,23 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   width: 32px;
 }
 
-.buddypress-wrap .bp-feedback.no-icon a[data-bp-close],
-.buddypress-wrap .bp-feedback.no-icon button[data-bp-close] {
+.bp-feedback.no-icon a[data-bp-close],
+.bp-feedback.no-icon button[data-bp-close] {
   top: -6px;
   left: 6px;
 }
 
-.buddypress-wrap button[data-bp-close]:hover {
+button[data-bp-close]:hover {
   background-color: transparent;
 }
 
-.buddypress-wrap .bp-feedback p {
-  margin: 0;
-}
-
-.buddypress-wrap .bp-feedback .bp-icon {
-  font-size: 20px;
-  padding: 0 2px;
-}
-
-.buddypress-wrap .bp-feedback.info .bp-icon,
-.buddypress-wrap .bp-feedback.help .bp-icon,
-.buddypress-wrap .bp-feedback.error .bp-icon,
-.buddypress-wrap .bp-feedback.warning .bp-icon,
-.buddypress-wrap .bp-feedback.loading .bp-icon,
-.buddypress-wrap .bp-feedback.success .bp-icon,
-.buddypress-wrap .bp-feedback.updated .bp-icon {
+.bp-feedback.info .bp-icon,
+.bp-feedback.help .bp-icon,
+.bp-feedback.error .bp-icon,
+.bp-feedback.warning .bp-icon,
+.bp-feedback.loading .bp-icon,
+.bp-feedback.success .bp-icon,
+.bp-feedback.updated .bp-icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -4395,49 +4392,49 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   align-items: center;
 }
 
-.buddypress-wrap .bp-feedback.info .bp-icon,
-.buddypress-wrap .bp-feedback.help .bp-icon {
+.bp-feedback.info .bp-icon,
+.bp-feedback.help .bp-icon {
   background-color: #0b80a4;
 }
 
-.buddypress-wrap .bp-feedback.info .bp-icon:before,
-.buddypress-wrap .bp-feedback.help .bp-icon:before {
+.bp-feedback.info .bp-icon:before,
+.bp-feedback.help .bp-icon:before {
   content: "\f348";
 }
 
-.buddypress-wrap .bp-feedback.error .bp-icon,
-.buddypress-wrap .bp-feedback.warning .bp-icon {
+.bp-feedback.error .bp-icon,
+.bp-feedback.warning .bp-icon {
   background-color: #d33;
 }
 
-.buddypress-wrap .bp-feedback.error .bp-icon:before,
-.buddypress-wrap .bp-feedback.warning .bp-icon:before {
+.bp-feedback.error .bp-icon:before,
+.bp-feedback.warning .bp-icon:before {
   content: "\f534";
 }
 
-.buddypress-wrap .bp-feedback.loading .bp-icon {
+.bp-feedback.loading .bp-icon {
   background-color: #ffd087;
 }
 
-.buddypress-wrap .bp-feedback.loading .bp-icon:before {
+.bp-feedback.loading .bp-icon:before {
   content: "\f469";
 }
 
-.buddypress-wrap .bp-feedback.success .bp-icon,
-.buddypress-wrap .bp-feedback.updated .bp-icon {
+.bp-feedback.success .bp-icon,
+.bp-feedback.updated .bp-icon {
   background-color: #8a2;
 }
 
-.buddypress-wrap .bp-feedback.success .bp-icon:before,
-.buddypress-wrap .bp-feedback.updated .bp-icon:before {
+.bp-feedback.success .bp-icon:before,
+.bp-feedback.updated .bp-icon:before {
   content: "\f147";
 }
 
-.buddypress-wrap .bp-feedback.help .bp-icon:before {
+.bp-feedback.help .bp-icon:before {
   content: "\f468";
 }
 
-.buddypress-wrap #pass-strength-result {
+#pass-strength-result {
   background-color: #eee;
   border-color: #ddd;
   border-style: solid;
@@ -4450,35 +4447,35 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   width: auto;
 }
 
-.buddypress-wrap #pass-strength-result.show {
+#pass-strength-result.show {
   display: block;
 }
 
-.buddypress-wrap #pass-strength-result.mismatch {
+#pass-strength-result.mismatch {
   background-color: #333;
   border-color: transparent;
   color: #fff;
 }
 
-.buddypress-wrap #pass-strength-result.error, .buddypress-wrap #pass-strength-result.bad {
+#pass-strength-result.error, #pass-strength-result.bad {
   background-color: #ffb78c;
   border-color: #ff853c;
   color: #fff;
 }
 
-.buddypress-wrap #pass-strength-result.short {
+#pass-strength-result.short {
   background-color: #ffa0a0;
   border-color: #f04040;
   color: #fff;
 }
 
-.buddypress-wrap #pass-strength-result.strong {
+#pass-strength-result.strong {
   background-color: #66d66e;
   border-color: #438c48;
   color: #fff;
 }
 
-.buddypress-wrap .standard-form#signup_form div div.error {
+.standard-form#signup_form div div.error {
   background: #faa;
   color: #a00;
   margin: 0 0 10px 0;
@@ -4486,13 +4483,13 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   width: 90%;
 }
 
-.buddypress-wrap .accept,
-.buddypress-wrap .reject {
+.accept,
+.reject {
   float: right;
   margin-right: 10px;
 }
 
-.buddypress-wrap .members-list.grid .bp-ajax-message {
+.members-list.grid .bp-ajax-message {
   background: rgba(255, 255, 255, 0.9);
   border: 1px solid #eee;
   font-size: 14px;
